--- a/stories/.storybook/manager-head.html
+++ b/stories/.storybook/manager-head.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="../stories/assets/favicon.ico">
+<link rel="shortcut icon" href="../assets/favicon.ico">
 <script>
   // noinspection JSVoidFunctionReturnValueUsed
   var observer = new MutationObserver(function(mutations) {
